# RAI

./: .gitignore  pyproject.toml
src/: learn.py
src/CI_testing/: CMI.py  chi2.py  g_testing.py
src/engine/RAI/: RAI.py  algorithm.py
src/engine/indicator/: CMI.py  bayes_factor.py
src/engine/network/: model.py
src/engine/strucure/: Sub_strucures.py
src/preprocess/: utils.py
src/visualization/: graph.py
